# actix_template

./: Cargo.toml  Dockerfile
.docker/slim/: Dockerfile
src/: main.rs
src/routes/: index_route.rs  search_route.rs
